# NexusCore

./: CMakeLists.txt  debug_and_run.sh  main.cpp
AUDIO/: Audio.cpp  Audio.h
Dependencies/ImGui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp
Dependencies/glfw/: cmake_uninstall.cmake
Dependencies/glfw/docs/: Doxyfile
Dependencies/json/: json.hpp
Dependencies/tfd/: tinyfiledialogs.cpp  tinyfiledialogs.h
FS/: MainFileSystem.cpp  MainFileSystem.h
MATH/: MATH.cpp  MATH.hpp  Vector2D.h
NETWORKING/: CNetworking.h
SCRIPTING/: FunctionBindings.cpp  FunctionBindings.h  ImGuiBindings.cpp  ImGuiBindings.h  Scripting.cpp  Scripting.h  example.js
UI/: BaseApp.cpp  BaseApp.h  CMainWindow.cpp  CMainWindow.h  Fonts.h  GuiTaskQueue.h  INormalWindow.h  IWindow.h  Renderer.cpp  Renderer.h  SettingsMenu.cpp  SettingsMenu.h
UI/FONTS/: fa_solid.h
UI/Image/: image.cpp  image.h  logo.h
UI/Popup/: IPopup.h  PopupHandler.cpp  PopupHandler.h  SearchPopup.cpp  SearchPopup.h
UI/ScriptPlayground/: ScriptPlayground.cpp  ScriptPlayground.h
UTILS/: ThreadPool.h
